--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "zoom-clone-2.0",
+    "name": "meet-app-clone",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
