--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.0.3",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "nodemon": "^2.0.22",
         "peer": "^0.5.3",
         "socket.io": "^2.3.0",
         "uuid": "^8.3.2"
