--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,26 @@
     "version": 2,
     "builds": [
         {
-            "src": "./server.js",
+            "src": "server.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
     ],
-    "routes": [
+    "routes":[
         {
-            "src": "/(.*)",
-            "dest": "/"
+            "src": "/api/(.*)",
+            "dest": "server.js"
+        },
+        {
+            "src": "/",
+            "dest": "public/index.html"
+        },
+        {
+            "src": "/(.+)",
+            "dest": "public/$1"
         }
     ]
-  }
+}
