--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "name": "meet-clone",
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+  "builds": [{ "src": "./server.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "./server.js" }]
 }
