--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "meet-app-clone",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
-        "start": "nodemon server.js"
+        "start": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
